src/test/ui/where-clauses/where-clause-constraints-are-local-for-inherent-impl.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/where-clause-constraints-are-local-for-inherent-impl.rs:13:22
   |
LL | fn require_copy<T: Copy>(x: T) {}
   |    ------------    ---- required by this bound in `require_copy`
...
LL |         require_copy(self.x);
   |                      ^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
